Kleopatra: Ensure that file encryption dialogs has shortcuts on all actions
Closed, ResolvedPublic

Assigned To
Authored By
aheinecke
Aug 4 2021, 1:57 PM
Tags

Description

The file encryption dialog does not have shortcuts on all actions. That is not so nice for accessibility and can easily be fixed.

Event Timeline

aheinecke created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Aug 16 2021, 3:53 PM

I have added shortcuts to the checkboxes and the (first) visible filename requester. I have not added shortcuts to the two buttons because the first one is anyway the default button, i.e. it reacts on Return, and the Cancel button reacts on Esc.

ikloecker changed the task status from Open to Testing.Aug 19 2021, 4:05 PM
ikloecker reassigned this task from ikloecker to aheinecke.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a subscriber: ikloecker.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 25 2021, 11:43 AM
werner added a subscriber: werner.

Closing. In case the audit will request more, we can re-open this task.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:07 PM