Manually specify shortcuts for all checkboxes

Note: Qt automatically assigns shortcuts if one presses and holds the Alt
key, but for documentation purposes and better accessibility we explicitly
set shortcuts.

GnuPG-bug-id: 5544